comms-api.yaml
kind: Pod
apiVersion: v1
metadata:
  name: comms-api
  labels:
    app: api
spec:
  containers:
    - name: comms-api
      image: comms-api
      imagePullPolicy: Never

---

kind: Service
apiVersion: v1
metadata:
  name: comms-api-service
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 8081
