comms-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: comms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: comms-client-service
            servicePort: 80
        - path: /api
          backend:
            serviceName: comms-api-service
            servicePort: 80
